Added Features (Sketching Later on)

--- a/HCI/index.html
+++ b/HCI/index.html
@@ -341,8 +341,19 @@
       </div>
 
       <div class="box">
-        <h2 id="Features">Features we can consider</h2>
-        
+        <h2 id="Features">Features we can consider implementing</h2>
+        <ul>
+          <h3>For Browsh:</h3>
+          <li>1. Menu on the bottom side of the screen (Like Lynx has, but clikable.)</li>
+          <li>2. Option for Keyboard control.</li>
+          <li>3. Lightweight Mode.</li>
+        </ul>
+        <ul></ul>
+        <ul>
+          <h3>For Lynx:</h3>
+          <li>1. Color Scheme change</li>
+          <li>2. Always accept important cookies</li>
+        </ul>
 
 
       </div>
