Added section for features I consider implementing

--- a/HCI/index.html
+++ b/HCI/index.html
@@ -344,16 +344,19 @@
         <h2 id="Features">Features we can consider implementing</h2>
         <ul>
           <h3>For Browsh:</h3>
-          <li>1. Menu on the bottom side of the screen (Like Lynx has, but clikable.)</li>
-          <li>2. Option for Keyboard control.</li>
-          <li>3. Lightweight Mode.</li>
+          <li>1.Menu on the bottom side of the screen, just like Lynx has.</li>
+          <li>2.Option for Keyboard control.</li>
+          <li>3.Option for Lightweight Mode.</li>
+          <img id="image" src="./Notes or Drawings/IMG_20230331_124134.jpg">
         </ul>
-        <ul></ul>
+       
         <ul>
           <h3>For Lynx:</h3>
-          <li>1. Color Scheme change</li>
-          <li>2. Always accept important cookies</li>
+          <li>1.Color Scheme changer.</li>
+          <li>2. Option to always accept permisions</li>
+          <img id="image" src="./Notes or Drawings/IMG_20230331_124202.jpg">
         </ul>
+        
 
 
       </div>
